# CPE471-VulkanBase

./: .gitmodules  CMakeLists.txt  FindGfxLibs.cmake  README.md  VkShaderCompile.cmake
ext/: vma_impl.cc
shaders/: fallback.frag  normal.frag  passthru.vert  shading.inl  standard.frag  standard.vert  vertexColor.frag
src/: Application.cc  Application.h  BasicVulkanApp.cc  BasicVulkanApp.h  VulkanDevices.cc  VulkanDevices.h  VulkanGraphicsApp.cc  VulkanGraphicsApp.cpp  VulkanGraphicsApp.h  VulkanSetupBaseApp.cc  VulkanSetupBaseApp.cpp  VulkanSetupBaseApp.h  common.h  load_obj.cc  load_obj.h  main.cc  main.cpp  vkutils.cc  vkutils.h  vkutils_VulkanRenderPipeline.cc
src/application/: ComputeProvider.cc  ComputeProvider.h  RenderProvider.h  SwapchainProvider.cc  SwapchainProvider.h  VulkanAppInterface.h  VulkanSetupCore.cc  VulkanSetupCore.h
src/data/: DeviceSyncedBuffer.h  DualTransferBackedBuffer.cc  DualTransferBackedBuffer.h  MultiInstanceUniformBuffer.cc  MultiInstanceUniformBuffer.h  Pose.cc  Pose.h  SyncedBuffer.h  UniformBuffer.cc  UniformBuffer.cpp  UniformBuffer.h  UniformHandlerCollection.cc  UniformHandling.h  UploadTransferBackedBuffer.cc  UploadTransferBackedBuffer.h  VertexGeometry.h  VertexGeometry.inl  VertexInput.h
src/utils/: BufferedTimer.cc  BufferedTimer.h  FpsTimer.cc  FpsTimer.h  common.h  map_merge.h  optional.h
src/vkutils/: .gitignore  CMakeLists.txt  README.md  VmaHost.cc  VmaHost.h  VmaImplementation.cc  VulkanDevices.cc  VulkanDevices.h  optional.h  vkutils.cc  vkutils.cpp  vkutils.h  vkutils_VulkanComputePipeline.cc  vkutils_VulkanComputePipeline.inl  vkutils_VulkanRenderPipeline.cc  vkutils_VulkanRenderPipeline.inl
tests/: CMakeLists.txt  UniformBuffer.cc  UniformBuffer_tests.cc  driver.cpp  optional_tests.cc
